# esp32s3_xbox_adapter

./: CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  esp_hid_gap.c  esp_hid_host_main.c  hid_ps4_driver.c  hid_ps4_driver.h  idf_component.yml
